2007-06-09	Andriano Rino <rino-andr/at/users/dot/sourceforge/dot/net>

	* ima/resources/it.ts:
	* ima/resources/it.qm:
	* lib/resources/it.ts:
	* lib/resources/it.qm:
	updated Italian localization and removed obsolete
	translations

2007-06-04	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* configure.in:
	made 1.0.3 release

	* lib/Makefile.am:
	fixed missing SOURCE-entry for italc_core.dll

	* ica/win32/src/Log.h:
	* ica/win32/src/Log.cpp:
	* lib/include/local_system.h:
	* lib/src/local_system.cpp:
	made log-level of WinVNC being equal to iTALC log-level

	* ica/src/isd_server.cpp:
	use QProcess::startDetached() instead of QProcess::start() for
	launching commands

	* ima/src/classroom_manager.h:
	* ima/src/classroom_manager.cpp:
	* ima/src/client.cpp:
	* ima/src/dialogs.cpp:
	* ima/src/dialogs.h:
	renamed class multiLogonDialog to remoteLogonDialog

	* ima/dialogs/multi_logon.ui:
	* ima/artwork/multilogon*png:
	renamed to "remotelogon*"

2007-06-01	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ima/src/main_window.h:
	* ima/src/main_window.cpp:
	* ima/src/client.cpp:
	stop demo on clients after student showed demo

	* ica/src/ica_main.cpp:
	create QSystemTrayIcon-object on stack rather than heap for being
	destroyed properly at exit - fixes problem with non-disappearing icon
	after exit on win32

2007-05-30	Dirk Zoellner <dirkzoellner/at/users/dot/sourceforge/dot/net>

	* ima/src/main_window.cpp:
	* ima/src/main_window.h:
	added fullscreen-functionality via F11

	* ima/src/classroom_manager.cpp:
	- save window-position in personal-config, move to (0,0) if no items
	  in configuration exist
	- set sane default-size for main-window if no according configuration
	  exists
	- in client-treeview display remote IP of client rather local IP

	* ima/src/remote_control_widget.cpp:
	* ima/src/main_window.cpp:
	apply API-changes of toolButton-class

	* ima/src/tool_button.cpp:
	* ima/src/tool_button.h:
	added alternative label functionality
